--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edg">
     <title>GitFinder - Github user finder</title>
     <meta name="title" content="GitFinder - Github user finder">
     <meta name="description" content="Find a github user information with GitFinder.">
 
     <!-- favicon -->
-    <link rel="stylesheet" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+
 
     <!-- theme js -->
     <script src="assets/js/theme.js"></script>
@@ -20,23 +22,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- material icon link -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0" />
 
     <!-- custom css link -->
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <!-- custom js link -->
     <script src="assets/js/app.js" type="module"></script>
-    
+
 </head>
 
 <body>
 
-<!--
+    <!--
     - #SKIP TO CONTENT
  -->
 
- <a href="#main" class="skip-to-content">Skip to Content</a>
+    <a href="#main" class="skip-to-content">Skip to Content</a>
+
+
+    <!--
+    - #HEADER
+  -->
+
+    <header class="header" data-header="">
+        <div class="container">
+
+            <a href="/" class="logo">
+                <span class="text-primary">Git</span>Finder
+            </a>
+
+            <div class="header-search">
+
+                <button class="icon-btn search-toggler" aria-controls="searchBox" aria-expanded="false"
+                    aria-label="Toggle search" data-search-toggle>
+                    <span class="material-symbols-rounded search-icon" aria-hidden="true">search</span>
+
+                    <span class="material-symbols-rounded close-icon" aria-hidden="true">arrow_back</span>
+                </button>
+
+                <div class="search-box" id="searchBox">
+                    <span class="material-symbols-rounded leading-icon" aria-hidden="true">search</span>
+
+                    <input type="search" name="search" aria-label="Search github username"
+                        placeholder="Search username*" class="search-field label-1" data-search-field>
+
+                    <button class="search-btn" aria-label="Search submit" data-search-submit>
+                        <span class="material-symbols-rounded" aria-hidden="true">search</span>
+
+                        <span class="label-1">Search</span>
+                    </button>
+
+                </div>
+
+            </div>
+
+            <button class="icon-btn theme-btn" aria-pressed="false" aria-label="Toggle dark and light theme"
+                data-theme-btn>
+                <span class="material-symbols-rounded sun-icon" aria-hidden="true">light_mode</span>
+
+                <span class="material-symbols-rounded moon-icon" aria-hidden="true">dark_mode</span>
+            </button>
+
+        </div>
+    </header>
 
 </body>
 
