light and dark theme

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" data-theme="dark">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edg">
     <title>GitFinder - Github user finder</title>
+
+     <!-- Build Your First GitHub App with JavaScript and GitHub API: Easy and Fast  -->
+    
     <meta name="title" content="GitFinder - Github user finder">
     <meta name="description" content="Find a github user information with GitFinder.">
 
