initial main.js and header functionality

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edg">
     <title>GitFinder - Github user finder</title>
 
-     <!-- Build Your First GitHub App with JavaScript and GitHub API: Easy and Fast  -->
-    
+    <!-- Build Your First GitHub App with JavaScript and GitHub API: Easy and Fast  -->
+
     <meta name="title" content="GitFinder - Github user finder">
     <meta name="description" content="Find a github user information with GitFinder.">
 
@@ -90,6 +90,13 @@
 
         </div>
     </header>
+
+
+    <main class="main" id="main">
+        <div class="container">
+
+        </div>
+    </main>
 
 </body>
 
