--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
     <a href="#main" class="skip-to-content">Skip to Content</a>
 
-
     <!--
     - #HEADER
   -->
@@ -94,6 +93,72 @@
 
     <main class="main" id="main">
         <div class="container">
+
+            <!--
+                - #PROFILE
+             -->
+
+            <section class="profile" data-profile-card>
+
+                <figure class="avatar-circle img-holder" style="--width:280;--height:280;">
+                    <img src="assets/images/profile.jpeg" width="280" height="280" alt="profile matuladaandi"
+                        class="img-cover">
+                </figure>
+
+                <h1 class="title-2">M.Andi.Matulada</h1>
+
+                <p class="username text-primary">matuladaandi</p>
+
+                <p class="bio">Web Developer</p>
+
+                <a href="#" class="btn btn-secondary" target="_blank">
+                    <span class="material-symbols-rounded" aria-hidden="true">open_in_new</span>
+
+                    <span class="span">See on Github</span>
+                </a>
+
+                <ul class="profile-meta">
+
+                    <li class="meta-item">
+                        <span class="material-symbols-rounded" aria-hidden="true">location_on</span>
+
+                        <span class="meta-text">Dompu, ID</span>
+                    </li>
+                    <!-- <li class="meta-item">
+                        <span class="material-symbols-rounded" aria-hidden="true">location_on</span>
+
+                        <span class="meta-text">Dompu, ID</span>
+                    </li> -->
+
+                </ul>
+
+                <ul class="profile-stats">
+
+                    <li class="stats-item">
+                        <span class="body">42</span>Repos
+                    </li>
+                    <li class="stats-item">
+                        <span class="body">0</span>Followers
+                    </li>
+                    <li class="stats-item">
+                        <span class="body">2</span>Following
+                    </li>
+
+                </ul>
+
+                <div class="footer">
+                    <p class="copyright">&copy; 2024 matuladaandi</p>
+                </div>
+                
+                <!-- <div class="profile-skeleton">
+                    <div class="skeleton avatar-skeleton"></div>
+                    <div class="skeleton title-skeleton"></div>
+                    <div class="skeleton text-skeleton text-1"></div>
+                    <div class="skeleton text-skeleton text-2"></div>
+                    <div class="skeleton text-skeleton text-3"></div>
+                </div> -->
+
+            </section>
 
         </div>
     </main>
