--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
     </header>
 
 
+    <!--
+        - #MAIN
+     -->
+
     <main class="main" id="main">
         <div class="container">
 
@@ -105,7 +109,7 @@
                         class="img-cover">
                 </figure>
 
-                <h1 class="title-2">M.Andi.Matulada</h1>
+                <h1 class="title-2">M. Andi Matulada</h1>
 
                 <p class="username text-primary">matuladaandi</p>
 
@@ -117,6 +121,7 @@
                     <span class="span">See on Github</span>
                 </a>
 
+                <!-- profile meta -->
                 <ul class="profile-meta">
 
                     <li class="meta-item">
@@ -132,6 +137,7 @@
 
                 </ul>
 
+                <!-- profile status -->
                 <ul class="profile-stats">
 
                     <li class="stats-item">
@@ -146,10 +152,11 @@
 
                 </ul>
 
+                <!-- footer profile -->
                 <div class="footer">
                     <p class="copyright">&copy; 2024 matuladaandi</p>
                 </div>
-                
+
                 <!-- <div class="profile-skeleton">
                     <div class="skeleton avatar-skeleton"></div>
                     <div class="skeleton title-skeleton"></div>
@@ -160,8 +167,247 @@
 
             </section>
 
+
+            <!--
+                - #TAP
+             -->
+
+            <section class="tab-container">
+
+                <div class="tab-list" aria-label="Tab Navigation" role="tablist">
+
+                    <button class="tab-btn" aria-selected="true" role="tab" id="tab-1" tabindex="0"
+                        aria-controls="panel-1" data-tab-btn>
+                        Repositories
+                    </button>
+                    <button class="tab-btn" aria-selected="false" role="tab" id="tab-2" tabindex="-1"
+                        aria-controls="panel-2" data-tab-btn data-forked-tab-btn->
+                        Forked
+                    </button>
+                    <button class="tab-btn" aria-selected="false" role="tab" id="tab-3" tabindex="-1"
+                        aria-controls="panel-3" data-tab-btn data-follower-tab-btn>
+                        Followers
+                    </button>
+                    <button class="tab-btn" aria-selected="false" role="tab" id="tab-4" tabindex="-1"
+                        aria-controls="panel-4" data-tab-btn data-following-tab-btn>
+                        Following
+                    </button>
+
+                </div>
+
+                <!-- Repositories Tap -->
+                <div class="tab-panel" id="panel-1" role="tabpanel" aria-labelledby="tab-1" tabindex="0" data-tab-panel
+                    data-repo-panel>
+
+                    <h2 class="sr-only">Repositories</h2>
+
+                    <article class="card repo-card">
+
+                        <div class="card-body">
+
+                            <a href="#" class="card-title" target="_blank">
+                                <h3 class="title-3">weatherio-starter</h3>
+                            </a>
+
+                            <p class="card-text">
+                                Starter file for weatherio project
+                            </p>
+
+                            <span class="badge">Public</span>
+
+                        </div>
+
+                        <div class="card-footer">
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">code_blocks</span>
+
+                                <span class="span">CSS</span>
+                            </div>
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">star_rate</span>
+
+                                <span class="span">12</span>
+                            </div>
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">family_history</span>
+
+                                <span class="span">4</span>
+                            </div>
+
+                        </div>
+
+                    </article>
+
+                    <div class="card repo-skeleton">
+
+                        <div class="card-body">
+                            <div class="skeleton title-skeleton"></div>
+
+                            <div class="skeleton text-skeleton text-1"></div>
+                            <div class="skeleton text-skeleton text-2"></div>
+                        </div>
+
+                        <div class="card-footer">
+                            <div class="skeleton text-skeleton"></div>
+                            <div class="skeleton text-skeleton"></div>
+                            <div class="skeleton text-skeleton"></div>
+                        </div>
+
+                    </div>
+
+                    <div class="error-content">
+                        <p class="title-1">Oops! :(</p>
+                        <p class="text">Doesn't have any public repositories yet.</p>
+                    </div>
+
+                </div>
+
+                <!-- Forked Tap -->
+                <div class="tab-panel" id="panel-2" role="tabpanel" aria-labelledby="tab-2" tabindex="0" data-tab-panel
+                    data-forked-panel hidden>
+
+                    <h2 class="sr-only">Forked repositories</h2>
+
+                    <article class="card repo-card">
+
+                        <div class="card-body">
+
+                            <a href="#" class="card-title" target="_blank">
+                                <h3 class="title-3">weatherio-starter</h3>
+                            </a>
+
+                            <p class="card-text">
+                                Starter file for weatherio project
+                            </p>
+
+                            <span class="badge">Public</span>
+
+                        </div>
+
+                        <div class="card-footer">
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">code_blocks</span>
+
+                                <span class="span">CSS</span>
+                            </div>
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">star_rate</span>
+
+                                <span class="span">12</span>
+                            </div>
+
+                            <div class="meta-item">
+                                <span class="material-symbols-rounded" aria-hidden="true">family_history</span>
+
+                                <span class="span">4</span>
+                            </div>
+
+                        </div>
+
+                    </article>
+
+                    <div class="error-content">
+                        <p class="title-1">Oops! :(</p>
+                        <p class="text">Doesn't have any forked repositories yet.</p>
+                    </div>
+
+                </div>
+
+                <!-- Followers Tab-->
+                <div class="tab-panel" id="panel-3" role="tabpanel" aria-labelledby="tab-3" tabindex="0" data-tab-panel
+                    data-follower-panel hidden>
+
+                    <h2 class="sr-only">Followers</h2>
+
+                    <article class="card follower-card">
+
+                        <figure class="avatar-circle img-holder">
+                            <img src="assets/images/follower-img.png" alt="john" class="img-cover" width="56"
+                                height="56" loading="lazy">
+                        </figure>
+
+                        <h3 class="card-title">john</h3>
+
+                        <button class="icon-btn" aria-label="Go to john profile">
+                            <span class="material-symbols-rounded" aria-hidden="true">link</span>
+                        </button>
+
+                    </article>
+
+                    <div class="card follower-skeleton">
+                        <div class="skeleton avatar-skeleton"></div>
+
+                        <div class="skeleton title-skeleton"></div>
+                    </div>
+
+                    <div class="error-content">
+                        <p class="title-1">Oops! :(</p>
+                        <p class="text">Doesn't have any follower yet.</p>
+                    </div>
+
+                </div>
+
+                <!-- Followings Tap -->
+                <div class="tab-panel" id="panel-4" role="tabpanel" aria-labelledby="tab-4" tabindex="0" data-tab-panel
+                    data-following-panel hidden>
+
+                    <h2 class="sr-only">Following</h2>
+
+                    <article class="card follower-card">
+
+                        <figure class="avatar-circle img-holder">
+                            <img src="assets/images/follower-img.png" alt="john" class="img-cover" width="56"
+                                height="56" loading="lazy">
+                        </figure>
+
+                        <h3 class="card-title">john</h3>
+
+                        <button class="icon-btn" aria-label="Go to john profile">
+                            <span class="material-symbols-rounded" aria-hidden="true">link</span>
+                        </button>
+
+                        <div class="error-content">
+                            <p class="title-1">Oops! :(</p>
+                            <p class="text">Doesn't have any Following yet.</p>
+                        </div>
+
+                    </article>
+
+                </div>
+
+            </section>
+
+            <!--
+                - #ERROR CONTENT
+             -->
+
+            <section class="error" data-error>
+
+                <p class="title-1">Oops! :(</p>
+                <p class="text">
+                    There is no account with this username yet.
+                </p>
+
+            </section>
+
         </div>
     </main>
+
+
+    <!--
+        - #FOOTER
+     -->
+
+    <footer class="footer container">
+
+        <p class="copyright">&copy; 2024 matuladaandi</p>
+
+    </footer>
 
 </body>
 
